--- a/makeopts.in
+++ b/makeopts.in
@@ -7,9 +7,8 @@ BUILDDIR  := @BUILDDIR@
 top_builddir := @BUILDDIR@
 
 # the c-client (imap) library:
-CCLIENTOSTYPE := @CCOSTYPE@
-CCLIENT_EXTRAAUTHENTICATORS := @CCLIENT_EXTRAAUTHENTICATORS@
-CCLIENT_EXTRACFLAGS := @CCLIENT_EXTRACFLAGS@
+IMAP_OSTYPE := @CCOSTYPE@
+IMAP_SPECIALAUTHENTICATORS := @IMAP_SPECIALAUTHENTICATORS@
 IMAP_CPPFLAGS := @IMAP_CPPFLAGS@
 IMAP_CFLAGS := @IMAP_CFLAGS@
 IMAP_CXXFLAGS := @IMAP_CXXFLAGS@
