--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-nl Process this file with autoconf to produce a configure script.
+dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
 AC_REVISION([$Id$])
