--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl Process this file with autoconf to produce a configure script.
+rdnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
 AC_REVISION([$Id$])
@@ -959,6 +959,10 @@ case "$GXX" in yes)
 	esac ;;	
 esac
 AC_SUBST(CXXFLAGS_RELAXED)
+
+AC_SUBST(CXXFLAGS)
+AC_SUBST(CFLAGS)
+AC_SUBST(CPPFLAGS)
 
 dnl Make sure we get statically linked against wxGTK
 LIBS_STATIC=`echo $LIBS | sed 's/-lwx_gtk./-Wl,-Bstatic & -Wl,-Bdynamic/g'`
