1. added "Folder tree" options page 2. added option to show the number of messages in the tree 3. added option to now propagate folder status to the parent

--- a/res/M.rc
+++ b/res/M.rc
@@ -110,6 +110,7 @@ adrbook		BITMAP "adrbook.bmp"
 helpers		BITMAP "helpers.bmp"
 msgview		BITMAP "msgview.bmp"
 folderview	BITMAP "folderview.bmp"
+foldertree	BITMAP "foldertree.bmp"
 sync		BITMAP "sync.bmp"
 miscopt		BITMAP "miscopt.bmp"
 access		BITMAP "access.bmp"
