added missing message icon

--- a/res/M.rc
+++ b/res/M.rc
@@ -46,6 +46,7 @@ audio		ICON	"audio.ico"
 binary		ICON	"binary.ico"
 dvi		ICON	"dvi.ico"
 image		ICON	"image.ico"
+message		ICON	"message.ico"
 postscript	ICON	"postscript.ico"
 text		ICON	"text.ico"
 video		ICON	"video.ico"
