--- a/configure.in
+++ b/configure.in
@@ -67,8 +67,8 @@ M_OVERRIDES(strict,strict compiler options,USE_STRICT,0,
 M_OVERRIDES(nls,i18n support,USE_I18N,1,
 --disable-nls           no internationalization support)
 
-M_OVERRIDES(python,Python,USE_PYTHON,1,
---disable-python        no Python scripting)
+M_OVERRIDES(python,Python scripting,USE_PYTHON,static,
+--with-python=xxx       one of none/static/dynamic)
 
 M_OVERRIDES(experimental,experimental code,USE_EXPERIMENTAL,0,
 --with-experimental     compile experimental code)
@@ -80,7 +80,7 @@ M_OVERRIDES(ccostype,c-client OS type,USE_CCOSTYPE,,
 --with-ccostype=xxx     use OS type xxx for c-client compilation)
 
 M_OVERRIDES(modules,modules,USE_MODULES,auto,
---with-modules=xxx      one of static/none/dynamic)
+--with-modules=xxx      one of none/static/dynamic)
 
 M_OVERRIDES(ssl,SSL support,USE_SSL,1,
 --with-ssl=DIR          path to SSL directories (requires OpenSSL))
@@ -643,57 +643,97 @@ AC_CHECK_HEADER(regex.h,
 case "$HAVE_POSIX_REGEX" in 1) AC_DEFINE(HAVE_POSIX_REGEX) ;; esac
 
 dnl --------------------------------------------------------------------------
-dnl check for python (a bit lengthy thanks to its stupid installation)
+dnl check for python
 dnl --------------------------------------------------------------------------
 
-case "$USE_PYTHON" in 1)
-   M_CHECK_MYHEADER(Python.h,
-       [ \
-       	 $prefix/include \
-         /usr/include/python1.5 \
-         /usr/local/include \
-         /usr/local/include/python1.5 \
-         /home/local/include \
-         /home/local/include/python1.5 \
-       ],
-       [ M_CHECK_MYLIB(python1.5,main,
-           [ /usr \
-             /usr/lib \
-             /usr/lib/python1.5 \
-             /usr/lib/python1.5/config \
-             /usr/local \
-             /usr/local/lib \
-             /usr/local/lib/python1.5 \
-             /usr/local/lib/python1.5/config \
-             /usr/local/python1.5/config\
-             /home/local \
-             /home/local/lib \
-             /home/local/lib/python1.5 \
-             /home/local/lib/python1.5/config \
-             /home/local/python1.5/config\
-           ],
-             [ PYTHON_LIBS="$libpath_python1_5_main -lpython1.5"],
-               [ USE_PYTHON=0 ]
-         )
-       ], [ USE_PYTHON=0 ]
-   )
+dnl Check for Python headers first: we need this for both dynamic and static
+dnl linking
+case "$USE_PYTHON" in
+static|Static|STATIC|dynamic|Dynamic|DYNAMIC|1)
+        M_CHECK_MYHEADER(Python.h,
+        [ \
+	    $prefix/include \
+	    /usr/include/python1.5 \
+	    /usr/local/include \
+	    /usr/local/include/python1.5 \
+	    /home/local/include \
+	    /home/local/include/python1.5 \
+        ],
+	[
+	],
+        [
+	    USE_PYTHON=0
+	])
+	;;
+
+*)
+	USE_PYTHON=0
+	AC_MSG_WARN(Unreckognized --with-python option value.)
+	;;
+esac
+
+dnl now check for the Python lib but only if linking statically
+case "$USE_PYTHON" in
+dynamic|Dynamic|DYNAMIC|1)
+	dnl FIXME
+	AC_MSG_WARN(Sorry, dynamic Python linking doesn't work currently)
+	USE_PYTHON=0
+	dnl AC_DEFINE(USE_PYTHON_DYNAMIC)
+	;;
+
+static|Static|STATIC)
+	M_CHECK_MYLIB(python1.5, main,
+	[ \
+	    /usr \
+	    /usr/lib \
+	    /usr/lib/python1.5 \
+	    /usr/lib/python1.5/config \
+	    /usr/local \
+	    /usr/local/lib \
+	    /usr/local/lib/python1.5 \
+	    /usr/local/lib/python1.5/config \
+	    /usr/local/python1.5/config\
+	    /home/local \
+	    /home/local/lib \
+	    /home/local/lib/python1.5 \
+	    /home/local/lib/python1.5/config \
+	    /home/local/python1.5/config\
+	],
+        [
+	    PYTHON_LIBS="$libpath_python1_5_main -lpython1.5"
+	    dnl extra libs required by python on freebsd
+	    case "$OSTYPE" in freebsd* | FreeBSD*)
+		LIBS="-lreadline $LIBS"
+		;;
+	    esac
+	],
+        [
+	    USE_PYTHON=0
+	])
+	;;
+
+0)
+	;;
+
+*)
+	AC_MSG_WARN(configure logic error, please report this bug)
+	;;
 esac
 
 case "$USE_PYTHON" in
-1)	AC_DEFINE(USE_PYTHON)
+0)	MAKE_USE_PYTHON=''
+	AC_MSG_WARN(Building M without Python leads to reduced functionality!)
+	PYTHON_LIBS=''
+	;;
+
+*)	AC_DEFINE(USE_PYTHON)
 	MAKE_USE_PYTHON="USE_PYTHON=yes"
-	dnl extra libs required by python on freebsd
-	case "$OSTYPE" in freebsd* | FreeBSD*)
-		LIBS="-lreadline $LIBS" ;;
-	esac
 	AC_PATH_PROG(SWIG,swig)
 	case "$SWIG" in '')
 	    AC_MSG_WARN([cannot find SWIG - will try to use intermediate files
 	    to compile Python support.  If possible, please install SWIG.]) ;;
-	esac ;;
-*)	MAKE_USE_PYTHON=''
-	AC_MSG_WARN(Building M without Python leads to reduced functionality!)
-	PYTHON_LIBS='' ;;
+	esac
+	;;
 esac
 AC_SUBST(MAKE_USE_PYTHON)
 
