--- a/configure.in
+++ b/configure.in
@@ -301,7 +301,7 @@ case "$m_cv_cxx_opernames" in yes)
 		*) M_GCC_BUGGY_NO_OPERATOR_NAMES
 			case "$m_cv_gcc_buggy_fno_operator_names" in
 			yes)
-			if test -f /etc/redhat-release && ! grep "7\.0" /etc/redhat-release
+			if test -f /etc/redhat-release -a ! grep "7\.0" /etc/redhat-release
 			then workarroundmsg="
 	It seems you are using Red Hat Linux 7.0. A workaround for your
 	problem is to use egcs to compile wxWindows and Mahogany:
